objects/DocuSignCredentials__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>API_Account_ID__c</fullName>
        <label>API Account ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>API_Password__c</fullName>
        <label>API Password</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>API_Username__c</fullName>
        <label>API Username</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Integrated_Key__c</fullName>
        <label>Integrated Key</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Webservice_URL__c</fullName>
        <label>Webservice URL</label>
        <type>Url</type>
    </fields>
    <label>DocuSignCredentials</label>
</CustomObject>